add new files and some corrections

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
         </div>
     </section>
 
-    <section class="danke">
+    <!-- <section class="danke">
         <div class="container">
             <div class="row">
                 <div class="col-12 offset-1">
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="agenda">
         <div class="container">
